Revision history for Perl extension Math::Clipper.

1.05  Sun Mar 11 19:06:00 2012

  - Releasing again, since the 1.04 release got out broken probably.

1.04  Sun Mar 11 19:01:00 2012

  - Upgraded the Clipper library to the newest available version 4.7.3.

1.03  Sat Jan 28 16:39:43 2012

  - Added a sub CLONE_SKIP { 1 } to make the module thread-safe in its
    basic form

1.02  Tue Oct 11 16:36:00 2011

  - Upgraded the Clipper library to the newest available version 4.5.5.
    use_full_coordinate_range is always enabled by default, so we now 
    provide this method for legacy purposes but it's actually a no-op.
  
  - Removed warning from integerize_coordinate_sets().

  - Added Test::Deep to prerequisites.

1.01  Mon Oct 03 09:15:00 2011

  - Upgraded the Clipper library to the newest available version 4.4.4.
  
  - New jointype and miterlimit arguments supported for OffsetPolygons

1.00  Mon Sep 19 08:48:00 2011
  * WARNING * This release contains incompatible changes!

  - Upgraded the Clipper library to the newest available version 4.3.0.

  - Clipper 4.3.0 has various interface changes, see the documentation
    for details. Most importantly, the coordinates are now 64bit
    integers instead of floating point numbers.

  - Clipper 4.3.0 now works with large integers internally instead of
    floats. Thus, this release adds support and tests for Clipper's
    int/double conversions.

  - Add ex_execute() for ExPolygons.

  - Add use_full_coordinate_range() method.

  - Remove broken is_clockwise() function and replace with
    is_counter_clockwise(), which is what the C++ function
    IsClockwise() has been doing all along.

  - area() is now a function instead of a method.

  - Exposes polygon_offset function.

  - force_orientation related functions are gone.

  - Compilation fixes for Windows perls and compilers.

  - Internals:
    => Use ExtUtils::Typemaps instead of the deprecated
       ExtUtils::Typemap.