@@ -1,5 +1,5 @@
 use Math::Clipper ':all';
-use Test::More tests=>3;
+use Test::More tests => 4;
 
 my $ccw = [
 [0,0],
@@ -20,6 +20,8 @@ my $tricky = [
 [0,41]
 ];
 
-ok(   Math::Clipper::is_counter_clockwise($ccw)    , 'is_ccw on a counter-clockwise polygon');
-ok( ! Math::Clipper::is_counter_clockwise($cw)     , 'is_ccw on a clockwise polygon');
-ok(   Math::Clipper::is_counter_clockwise($tricky) , 'is_ccw on a bowtie polygon');
+ok(   orientation($ccw)    , 'is_ccw on a counter-clockwise polygon');
+ok( ! orientation($cw)     , 'is_ccw on a clockwise polygon');
+ok(   orientation($tricky) , 'is_ccw on a bowtie polygon');
+
+is( is_counter_clockwise($ccw), orientation($ccw), 'is_counter_clockwise() === orientation()');
