@@ -103,14 +103,8 @@ add_clip_polygons(self, polys)
     self->AddPolygons(*polys, ptClip);
     delete polys;
 
-%}
-// In Clipper 4.3.0, IsClockwise() is misnamed - gives opposite results.
-// Author is reluctant to fix it.
-// But double check that when updating this module or the Clipper library.
-%{
-
 double
-is_counter_clockwise(polygon)
+orientation(polygon)
     ClipperLib::Polygon* polygon
   CODE:
     RETVAL = ClipperLib::Orientation(*polygon);
